--- a/index.html
+++ b/index.html
@@ -1,196 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Global Art – Luxury Brand</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<title>Global Art — Luxury Creative Studio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
 :root{
-  --dark:#0f172a;
-  --light:#fdf6e3;
+  --bg:#0b1220;
+  --fg:#fdf6e3;
+  --card:#020617;
   --gold:#facc15;
 }
 *{margin:0;padding:0;box-sizing:border-box;}
 html{scroll-behavior:smooth;}
-body{
-  background:var(--dark);
-  color:var(--light);
-  font-family:'Poppins',sans-serif;
-  transition:0.5s;
-}
-body.light{
-  background:var(--light);
-  color:var(--dark);
-}
-header{
-  position:fixed;
-  top:0;left:0;width:100%;
-  background:rgba(0,0,0,0.8);
-  padding:15px 30px;
-  z-index:1000;
-}
-body.light header{background:#ffffff;}
-nav{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-nav h1{
-  font-family:'Playfair Display',serif;
-  letter-spacing:3px;
-  color:var(--gold);
-}
-nav a{
-  margin-left:25px;
-  text-decoration:none;
-  color:#ccc;
-}
+body{font-family:Poppins,sans-serif;background:var(--bg);color:var(--fg);transition:.4s;}
+body.light{--bg:#fdf6e3;--fg:#0b1220;--card:#ffffff;}
+
+header{position:fixed;top:0;left:0;width:100%;backdrop-filter:blur(8px);
+background:rgba(0,0,0,.6);z-index:999;border-bottom:1px solid #1e293b;}
+body.light header{background:#ffffffcc;}
+nav{max-width:1200px;margin:auto;display:flex;align-items:center;justify-content:space-between;padding:14px 20px;}
+nav h1{font-family:"Playfair Display",serif;letter-spacing:3px;color:var(--gold);}
+nav a{color:#cbd5f5;text-decoration:none;margin-left:22px;}
 nav a:hover{color:var(--gold);}
-.toggle{
-  margin-left:20px;
-  padding:6px 15px;
-  border:1px solid var(--gold);
-  color:var(--gold);
-  background:none;
-  border-radius:6px;
-}
-.hero{
-  min-height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
-}
-.hero h2{
-  font-family:'Playfair Display',serif;
-  font-size:60px;
-  color:var(--gold);
-}
-.hero p{margin:20px auto;max-width:600px;}
-.btn{
-  display:inline-block;
-  padding:15px 40px;
-  border:1px solid var(--gold);
-  color:var(--gold);
-  text-decoration:none;
-}
-.btn:hover{background:var(--gold);color:black;}
-section{
-  padding:120px 20px;
-  max-width:1100px;
-  margin:auto;
-}
-h3{
-  text-align:center;
-  font-family:'Playfair Display',serif;
-  margin-bottom:50px;
-  color:var(--gold);
-}
-.cards{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:30px;
-}
-.card{
-  background:#020617;
-  padding:30px;
-  border:1px solid #1e293b;
-}
-body.light .card{background:white;}
-footer{
-  text-align:center;
-  padding:40px;
-  background:#020617;
-}
+.toggle{border:1px solid var(--gold);background:transparent;color:var(--gold);padding:6px 14px;border-radius:8px;margin-left:16px;}
+
+.hero{min-height:100vh;display:grid;place-items:center;text-align:center;
+background:radial-gradient(80% 50% at 50% 10%,#1f2a44,transparent);}
+body.light .hero{background:radial-gradient(80% 50% at 50% 10%,#e7dcc9,transparent);}
+.hero h2{font-family:"Playfair Display",serif;font-size:60px;color:var(--gold);letter-spacing:4px;}
+.hero p{max-width:680px;margin:18px auto;color:#d1d5ff;}
+body.light .hero p{color:#333;}
+.btn{display:inline-block;padding:14px 36px;border:1px solid var(--gold);color:var(--gold);text-decoration:none;border-radius:10px;}
+.btn:hover{background:var(--gold);color:#000;}
+
+section{max-width:1200px;margin:auto;padding:120px 20px;}
+h3{text-align:center;font-family:"Playfair Display",serif;color:var(--gold);margin-bottom:50px;}
+
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:28px;}
+.card{background:var(--card);border:1px solid #1e293b;border-radius:16px;padding:28px;transition:.3s;}
+.card:hover{transform:translateY(-8px);border-color:var(--gold);}
+
+footer{text-align:center;padding:40px;background:#020617;}
 body.light footer{background:#e5e7eb;}
-.float{
-  position:fixed;
-  bottom:25px;
-  width:55px;
-  height:55px;
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:26px;
-  color:white;
-  text-decoration:none;
-  z-index:999;
-}
-.whatsapp{right:25px;background:#25D366;}
+
+.float{position:fixed;bottom:22px;width:56px;height:56px;border-radius:50%;
+display:grid;place-items:center;font-size:26px;color:#fff;text-decoration:none;z-index:999;}
+.whatsapp{right:22px;background:#25D366;}
 .insta{right:90px;background:linear-gradient(45deg,#833ab4,#fd1d1d,#fcb045);}
-input,textarea{
-  width:100%;
-  padding:12px;
-  margin:10px 0;
-}
+
+form{max-width:520px;margin:auto}
+input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1px solid #1e293b;}
 </style>
 </head>
 
 <body>
 
-<a href="https://wa.me/917378272741" class="float whatsapp">💬</a>
-<a href="https://instagram.com/mystivated" class="float insta">📷</a>
+<a href="https://wa.me/917378272741" class="float whatsapp" target="_blank">💬</a>
+<a href="https://www.instagram.com/mystivated66" class="float insta" target="_blank">📷</a>
 
 <header>
-<nav>
-<h1>GLOBAL ART</h1>
-<div>
-<a href="#home">Home</a>
-<a href="#about">About</a>
-<a href="#services">Services</a>
-<a href="#contact">Contact</a>
-<button class="toggle" onclick="document.body.classList.toggle('light')">Light/Dark</button>
-</div>
-</nav>
+  <nav>
+    <h1>GLOBAL ART</h1>
+    <div>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+      <button class="toggle" onclick="document.body.classList.toggle('light')">Light/Dark</button>
+    </div>
+  </nav>
 </header>
 
 <div class="hero" id="home">
-<div>
-<h2>GLOBAL ART</h2>
-<p>Luxury design studio for premium brands.</p>
-<a href="https://wa.me/917378272741" class="btn">Chat on WhatsApp</a>
-</div>
+  <div>
+    <h2>GLOBAL ART</h2>
+    <p>Luxury creative studio for premium branding, logos and social media design.</p>
+    <a href="https://wa.me/917378272741" class="btn">Chat on WhatsApp</a>
+  </div>
 </div>
 
 <section id="about">
-<h3>About Us</h3>
-<p style="text-align:center;">We create luxury logos, social media designs and digital branding.</p>
+  <h3>About Us</h3>
+  <p style="text-align:center;max-width:720px;margin:auto;">
+    We build high-end visual identities, modern logos and social media creatives for brands that want to stand out.
+  </p>
 </section>
 
 <section id="services">
-<h3>Our Services</h3>
-<div class="cards">
-<div class="card">Luxury Logo Design</div>
-<div class="card">Instagram Branding</div>
-<div class="card">Digital Art</div>
-</div>
+  <h3>Our Services</h3>
+  <div class="grid">
+    <div class="card">Luxury Logo Design</div>
+    <div class="card">Instagram Branding</div>
+    <div class="card">Digital Art & Posters</div>
+    <div class="card">Website Visuals</div>
+  </div>
 </section>
 
 <section id="contact">
-<h3>Contact Global Art</h3>
-
-<form action="https://formsubmit.co/globalart@gmail.com" method="POST" style="max-width:500px;margin:auto;text-align:center;">
-<input type="text" name="name" placeholder="Your Name" required>
-<input type="email" name="email" placeholder="Your Email" required>
-<input type="text" name="phone" placeholder="Your WhatsApp Number">
-<textarea name="message" placeholder="Your Message" required></textarea>
-<button type="submit" class="btn">Send Message</button>
-</form>
-
-<p style="text-align:center;margin-top:30px;">
-WhatsApp: 7378272741<br>
-Instagram: mystivated<br>
-Email: globalart@gmail.com
-</p>
+  <h3>Contact Global Art</h3>
+  <form action="https://formsubmit.co/globalart@gmail.com" method="POST">
+    <input name="name" placeholder="Your Name" required />
+    <input type="email" name="email" placeholder="Your Email" required />
+    <input name="phone" placeholder="Your WhatsApp Number" />
+    <textarea name="message" placeholder="Your Message" required></textarea>
+    <button class="btn" type="submit">Send Message</button>
+  </form>
+  <p style="text-align:center;margin-top:24px">
+    WhatsApp: 7378272741 • Instagram: mystivated66
+  </p>
 </section>
 
-<footer>
-© 2026 Global Art
-</footer>
+<footer>© 2026 Global Art</footer>
 
 </body>
-</html>
+                              </html>
