--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1
 
 <body>
 
+<!-- Floating Buttons -->
 <a href="https://wa.me/917378272741" class="float whatsapp" target="_blank">💬</a>
 <a href="https://www.instagram.com/mystivated66" class="float insta" target="_blank">📷</a>
 
@@ -69,12 +70,14 @@ input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#services">Services</a>
+      <a href="#art-sale">Art Sale</a>
       <a href="#contact">Contact</a>
       <button class="toggle" onclick="document.body.classList.toggle('light')">Light/Dark</button>
     </div>
   </nav>
 </header>
 
+<!-- Hero Section -->
 <div class="hero" id="home">
   <div>
     <h2>GLOBAL ART</h2>
@@ -83,6 +86,7 @@ input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1
   </div>
 </div>
 
+<!-- About Section -->
 <section id="about">
   <h3>About Us</h3>
   <p style="text-align:center;max-width:720px;margin:auto;">
@@ -90,6 +94,7 @@ input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1
   </p>
 </section>
 
+<!-- Services Section -->
 <section id="services">
   <h3>Our Services</h3>
   <div class="grid">
@@ -100,6 +105,36 @@ input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1
   </div>
 </section>
 
+<!-- Art Sale Section -->
+<section id="art-sale">
+<h3>Art For Sale</h3>
+<div class="grid">
+
+<!-- Example Drawing 1 -->
+<div class="card">
+<img src="drawing1.jpg" alt="Drawing 1" style="width:100%;border-radius:12px;">
+<h4>Sunset Dreams</h4>
+<p>Price: ₹500</p>
+<a href="https://wa.me/917378272741?text=Hi%20I%20want%20to%20buy%20Sunset%20Dreams" class="btn" target="_blank">Order via WhatsApp</a>
+<br><br>
+<a href="https://www.paypal.com/paypalme/YOURPAYPALID/500" class="btn" target="_blank">Buy via PayPal</a>
+</div>
+
+<!-- Example Drawing 2 -->
+<div class="card">
+<img src="drawing2.jpg" alt="Drawing 2" style="width:100%;border-radius:12px;">
+<h4>Golden Horizon</h4>
+<p>Price: ₹700</p>
+<a href="https://wa.me/917378272741?text=Hi%20I%20want%20to%20buy%20Golden%20Horizon" class="btn" target="_blank">Order via WhatsApp</a>
+<br><br>
+<a href="https://www.paypal.com/paypalme/YOURPAYPALID/700" class="btn" target="_blank">Buy via PayPal</a>
+</div>
+
+<!-- Add more drawings in same format -->
+</div>
+</section>
+
+<!-- Contact Section -->
 <section id="contact">
   <h3>Contact Global Art</h3>
   <form action="https://formsubmit.co/globalart@gmail.com" method="POST">
@@ -117,4 +152,4 @@ input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1
 <footer>© 2026 Global Art</footer>
 
 </body>
-                              </html>
+  </html>
