--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ display:grid;place-items:center;font-size:26px;color:#fff;text-decoration:none;z
 form{max-width:520px;margin:auto}
 input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1px solid #1e293b;}
 
-/* Carousel Styles */
+/* Ultra Carousel & Popup */
 .carousel{
   display:flex;
   overflow-x:auto;
@@ -64,18 +64,23 @@ input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1
   scroll-behavior:smooth;
 }
 .carousel::-webkit-scrollbar{display:none;}
-.card img{border-radius:12px;width:100%;transition:.3s;}
+.card img{border-radius:12px;width:100%;transition:.3s;cursor:pointer;}
 .card:hover img{transform:scale(1.05);}
 .card h4{color:var(--gold);margin:12px 0 6px;}
 .card p{margin-bottom:12px;}
 .card .btn{display:inline-block;margin-right:8px;margin-top:6px;}
+
+/* Pop-up */
+#popup{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.85);display:none;align-items:center;justify-content:center;z-index:999;}
+#popup img{max-width:90%;max-height:90%;border-radius:16px;}
+#popup span{position:absolute;top:30px;right:30px;font-size:36px;color:#fff;cursor:pointer;}
 </style>
 </head>
 
 <body>
 
 <!-- Floating Buttons -->
-<a href="https://wa.me/9178272741" class="float whatsapp" target="_blank">💬</a>
+<a href="https://wa.me/917378272741" class="float whatsapp" target="_blank">💬</a>
 <a href="https://www.instagram.com/mystivated66" class="float insta" target="_blank">📷</a>
 
 <header>
@@ -97,7 +102,7 @@ input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1
   <div>
     <h2>GLOBAL ART</h2>
     <p>Luxury creative studio for premium branding, logos and social media design.</p>
-    <a href="https://wa.me/9178272741" class="btn">Chat on WhatsApp</a>
+    <a href="https://wa.me/917378272741" class="btn">Chat on WhatsApp</a>
   </div>
 </div>
 
@@ -125,53 +130,64 @@ input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1
 <h3>Art For Sale</h3>
 <div class="carousel">
 
-<!-- Drawing 1 -->
 <div class="card">
-<img src="drawing1.jpg" alt="Sunset Dreams">
+<img src="drawing1.jpg" alt="Sunset Dreams" onclick="openPopup(this.src)">
 <h4>Sunset Dreams</h4>
 <p>Price: ₹500</p>
-<a href="https://wa.me/9178272741?text=Hi%20I%20want%20to%20buy%20Sunset%20Dreams" class="btn" target="_blank">WhatsApp</a>
+<a href="https://wa.me/917378272741?text=Hi%20I%20want%20to%20buy%20Sunset%20Dreams" class="btn" target="_blank">WhatsApp</a>
 <a href="https://www.paypal.com/paypalme/YOURPAYPALID/500" class="btn" target="_blank">PayPal</a>
 </div>
 
-<!-- Drawing 2 -->
 <div class="card">
-<img src="drawing2.jpg" alt="Golden Horizon">
+<img src="drawing2.jpg" alt="Golden Horizon" onclick="openPopup(this.src)">
 <h4>Golden Horizon</h4>
 <p>Price: ₹700</p>
-<a href="https://wa.me/9178272741?text=Hi%20I%20want%20to%20buy%20Golden%20Horizon" class="btn" target="_blank">WhatsApp</a>
+<a href="https://wa.me/917378272741?text=Hi%20I%20want%20to%20buy%20Golden%20Horizon" class="btn" target="_blank">WhatsApp</a>
 <a href="https://www.paypal.com/paypalme/YOURPAYPALID/700" class="btn" target="_blank">PayPal</a>
 </div>
 
-<!-- Drawing 3 -->
 <div class="card">
-<img src="drawing3.jpg" alt="Moonlight Tale">
+<img src="drawing3.jpg" alt="Moonlight Tale" onclick="openPopup(this.src)">
 <h4>Moonlight Tale</h4>
 <p>Price: ₹600</p>
-<a href="https://wa.me/9178272741?text=Hi%20I%20want%20to%20buy%20Moonlight%20Tale" class="btn" target="_blank">WhatsApp</a>
+<a href="https://wa.me/917378272741?text=Hi%20I%20want%20to%20buy%20Moonlight Tale" class="btn" target="_blank">WhatsApp</a>
 <a href="https://www.paypal.com/paypalme/YOURPAYPALID/600" class="btn" target="_blank">PayPal</a>
 </div>
 
-<!-- Drawing 4 -->
 <div class="card">
-<img src="drawing4.jpg" alt="Golden Aura">
+<img src="drawing4.jpg" alt="Golden Aura" onclick="openPopup(this.src)">
 <h4>Golden Aura</h4>
 <p>Price: ₹800</p>
-<a href="https://wa.me/9178272741?text=Hi%20I%20want%20to%20buy%20Golden%20Aura" class="btn" target="_blank">WhatsApp</a>
+<a href="https://wa.me/917378272741?text=Hi%20I%20want%20to%20buy%20Golden Aura" class="btn" target="_blank">WhatsApp</a>
 <a href="https://www.paypal.com/paypalme/YOURPAYPALID/800" class="btn" target="_blank">PayPal</a>
 </div>
 
-<!-- Drawing 5 -->
 <div class="card">
-<img src="drawing5.jpg" alt="Twilight Glow">
+<img src="drawing5.jpg" alt="Twilight Glow" onclick="openPopup(this.src)">
 <h4>Twilight Glow</h4>
 <p>Price: ₹900</p>
-<a href="https://wa.me/9178272741?text=Hi%20I%20want%20to%20buy%20Twilight%20Glow" class="btn" target="_blank">WhatsApp</a>
+<a href="https://wa.me/917378272741?text=Hi%20I%20want%20to%20buy%20Twilight Glow" class="btn" target="_blank">WhatsApp</a>
 <a href="https://www.paypal.com/paypalme/YOURPAYPALID/900" class="btn" target="_blank">PayPal</a>
 </div>
 
 </div>
 </section>
+
+<!-- Popup for images -->
+<div id="popup" onclick="closePopup()">
+<span>×</span>
+<img src="" alt="preview">
+</div>
+
+<script>
+function openPopup(src){
+  document.querySelector('#popup img').src = src;
+  document.querySelector('#popup').style.display='flex';
+}
+function closePopup(){
+  document.querySelector('#popup').style.display='none';
+}
+</script>
 
 <!-- Contact Section -->
 <section id="contact">
@@ -191,4 +207,4 @@ input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1
 <footer>© 2026 Global Art</footer>
 
 </body>
-    </html>
+                </html>
